// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseInvite can hide 1`] = `
<Component
  contentStyle={
    Object {
      "borderColor": "#00AC18",
      "borderWidth": 1,
    }
  }
  hideShadow={true}
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00AC18",
          "justifyContent": "flex-start",
          "width": 40,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/dashboard/invite.png",
          }
        }
        style={
          Object {
            "marginTop": 14,
            "tintColor": "white",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
      testID="course-invite.acted"
    >
      <Text
        style={
          Object {
            "fontSize": 18,
            "fontWeight": "600",
            "margin": 12,
            "marginBottom": 0,
            "marginTop": 8,
          }
        }
      >
        Invite declined!
      </Text>
    </View>
  </View>
  <TouchableHighlight
    accessibilityLabel="Dismiss invitation to Coolest Course"
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    style={
      Object {
        "padding": 12,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="course-invite.1.dismiss-button"
    underlayColor="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/x-icon.png",
        }
      }
      style={
        Object {
          "tintColor": "#8B969E",
          "width": 16,
        }
      }
    />
  </TouchableHighlight>
</Component>
`;

exports[`CourseInvite renders action taken -- accept 1`] = `
<Component
  contentStyle={
    Object {
      "borderColor": "#00AC18",
      "borderWidth": 1,
    }
  }
  hideShadow={true}
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00AC18",
          "justifyContent": "flex-start",
          "width": 40,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/dashboard/invite.png",
          }
        }
        style={
          Object {
            "marginTop": 14,
            "tintColor": "white",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
      testID="course-invite.acted"
    >
      <Text
        style={
          Object {
            "fontSize": 18,
            "fontWeight": "600",
            "margin": 12,
            "marginBottom": 0,
            "marginTop": 8,
          }
        }
      >
        Invite accepted!
      </Text>
    </View>
  </View>
  <TouchableHighlight
    accessibilityLabel="Dismiss invitation to Coolest Course"
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    style={
      Object {
        "padding": 12,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="course-invite.1.dismiss-button"
    underlayColor="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/x-icon.png",
        }
      }
      style={
        Object {
          "tintColor": "#8B969E",
          "width": 16,
        }
      }
    />
  </TouchableHighlight>
</Component>
`;

exports[`CourseInvite renders action taken -- reject 1`] = `
<Component
  contentStyle={
    Object {
      "borderColor": "#00AC18",
      "borderWidth": 1,
    }
  }
  hideShadow={true}
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00AC18",
          "justifyContent": "flex-start",
          "width": 40,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/dashboard/invite.png",
          }
        }
        style={
          Object {
            "marginTop": 14,
            "tintColor": "white",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
      testID="course-invite.acted"
    >
      <Text
        style={
          Object {
            "fontSize": 18,
            "fontWeight": "600",
            "margin": 12,
            "marginBottom": 0,
            "marginTop": 8,
          }
        }
      >
        Invite declined!
      </Text>
    </View>
  </View>
  <TouchableHighlight
    accessibilityLabel="Dismiss invitation to Coolest Course"
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    style={
      Object {
        "padding": 12,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="course-invite.1.dismiss-button"
    underlayColor="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/x-icon.png",
        }
      }
      style={
        Object {
          "tintColor": "#8B969E",
          "width": 16,
        }
      }
    />
  </TouchableHighlight>
</Component>
`;

exports[`CourseInvite renders displayState acted -- accept 1`] = `
<Component
  contentStyle={
    Object {
      "borderColor": "#00AC18",
      "borderWidth": 1,
    }
  }
  hideShadow={true}
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00AC18",
          "justifyContent": "flex-start",
          "width": 40,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/dashboard/invite.png",
          }
        }
        style={
          Object {
            "marginTop": 14,
            "tintColor": "white",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
      testID="course-invite.acted"
    >
      <Text
        style={
          Object {
            "fontSize": 18,
            "fontWeight": "600",
            "margin": 12,
            "marginBottom": 0,
            "marginTop": 8,
          }
        }
      >
        Invite accepted!
      </Text>
    </View>
  </View>
  <TouchableHighlight
    accessibilityLabel="Dismiss invitation to Coolest Course"
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    style={
      Object {
        "padding": 12,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="course-invite.1.dismiss-button"
    underlayColor="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/x-icon.png",
        }
      }
      style={
        Object {
          "tintColor": "#8B969E",
          "width": 16,
        }
      }
    />
  </TouchableHighlight>
</Component>
`;

exports[`CourseInvite renders displayState acted -- reject 1`] = `
<Component
  contentStyle={
    Object {
      "borderColor": "#00AC18",
      "borderWidth": 1,
    }
  }
  hideShadow={true}
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00AC18",
          "justifyContent": "flex-start",
          "width": 40,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/dashboard/invite.png",
          }
        }
        style={
          Object {
            "marginTop": 14,
            "tintColor": "white",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
      testID="course-invite.acted"
    >
      <Text
        style={
          Object {
            "fontSize": 18,
            "fontWeight": "600",
            "margin": 12,
            "marginBottom": 0,
            "marginTop": 8,
          }
        }
      >
        Invite declined!
      </Text>
    </View>
  </View>
  <TouchableHighlight
    accessibilityLabel="Dismiss invitation to Coolest Course"
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    style={
      Object {
        "padding": 12,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="course-invite.1.dismiss-button"
    underlayColor="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/x-icon.png",
        }
      }
      style={
        Object {
          "tintColor": "#8B969E",
          "width": 16,
        }
      }
    />
  </TouchableHighlight>
</Component>
`;

exports[`CourseInvite renders hidden 1`] = `
<Component
  contentStyle={
    Object {
      "borderColor": "#00AC18",
      "borderWidth": 1,
    }
  }
  hideShadow={true}
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00AC18",
          "justifyContent": "flex-start",
          "width": 40,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/dashboard/invite.png",
          }
        }
        style={
          Object {
            "marginTop": 14,
            "tintColor": "white",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 18,
            "fontWeight": "600",
            "margin": 12,
            "marginBottom": 0,
            "marginTop": 8,
          }
        }
      >
        You have been invited
      </Text>
      <Text
        numberOfLines={1}
        style={
          Object {
            "marginBottom": 4,
            "marginHorizontal": 12,
          }
        }
      >
        Coolest Course
        , 
        Worst Section eva
      </Text>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-start",
            "margin": 8,
          }
        }
      >
        <Button
          accessibilityTraits="button"
          containerStyle={
            Array [
              Object {
                "backgroundColor": "#00AC18",
                "borderRadius": 4,
                "flex": 1,
                "height": 40,
                "margin": 4,
              },
              Object {
                "backgroundColor": "white",
                "borderColor": "#8B969E",
                "borderWidth": 0.5,
              },
            ]
          }
          onPress={[Function]}
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "#73818C",
              },
            ]
          }
          testID="course-invite.1.reject-button"
        >
          Decline
        </Button>
        <Button
          accessibilityTraits="button"
          containerStyle={
            Object {
              "backgroundColor": "#00AC18",
              "borderRadius": 4,
              "flex": 1,
              "height": 40,
              "margin": 4,
            }
          }
          onPress={[Function]}
          style={
            Object {
              "color": "white",
              "fontSize": 16,
              "fontWeight": "600",
            }
          }
          testID="course-invite.1.accept-button"
        >
          Accept
        </Button>
      </View>
    </View>
  </View>
</Component>
`;

exports[`CourseInvite renders invite 1`] = `
<Component
  contentStyle={
    Object {
      "borderColor": "#00AC18",
      "borderWidth": 1,
    }
  }
  hideShadow={true}
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00AC18",
          "justifyContent": "flex-start",
          "width": 40,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/dashboard/invite.png",
          }
        }
        style={
          Object {
            "marginTop": 14,
            "tintColor": "white",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 18,
            "fontWeight": "600",
            "margin": 12,
            "marginBottom": 0,
            "marginTop": 8,
          }
        }
      >
        You have been invited
      </Text>
      <Text
        numberOfLines={1}
        style={
          Object {
            "marginBottom": 4,
            "marginHorizontal": 12,
          }
        }
      >
        Coolest Course
        , 
        Worst Section eva
      </Text>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-start",
            "margin": 8,
          }
        }
      >
        <Button
          accessibilityTraits="button"
          containerStyle={
            Array [
              Object {
                "backgroundColor": "#00AC18",
                "borderRadius": 4,
                "flex": 1,
                "height": 40,
                "margin": 4,
              },
              Object {
                "backgroundColor": "white",
                "borderColor": "#8B969E",
                "borderWidth": 0.5,
              },
            ]
          }
          onPress={[Function]}
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "#73818C",
              },
            ]
          }
          testID="course-invite.1.reject-button"
        >
          Decline
        </Button>
        <Button
          accessibilityTraits="button"
          containerStyle={
            Object {
              "backgroundColor": "#00AC18",
              "borderRadius": 4,
              "flex": 1,
              "height": 40,
              "margin": 4,
            }
          }
          onPress={[Function]}
          style={
            Object {
              "color": "white",
              "fontSize": 16,
              "fontWeight": "600",
            }
          }
          testID="course-invite.1.accept-button"
        >
          Accept
        </Button>
      </View>
    </View>
  </View>
</Component>
`;

exports[`CourseInvite renders invite with course section 1`] = `
<Component
  contentStyle={
    Object {
      "borderColor": "#00AC18",
      "borderWidth": 1,
    }
  }
  hideShadow={true}
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00AC18",
          "justifyContent": "flex-start",
          "width": 40,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/dashboard/invite.png",
          }
        }
        style={
          Object {
            "marginTop": 14,
            "tintColor": "white",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 18,
            "fontWeight": "600",
            "margin": 12,
            "marginBottom": 0,
            "marginTop": 8,
          }
        }
      >
        You have been invited
      </Text>
      <Text
        numberOfLines={1}
        style={
          Object {
            "marginBottom": 4,
            "marginHorizontal": 12,
          }
        }
      >
        Coolest Course
      </Text>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-start",
            "margin": 8,
          }
        }
      >
        <Button
          accessibilityTraits="button"
          containerStyle={
            Array [
              Object {
                "backgroundColor": "#00AC18",
                "borderRadius": 4,
                "flex": 1,
                "height": 40,
                "margin": 4,
              },
              Object {
                "backgroundColor": "white",
                "borderColor": "#8B969E",
                "borderWidth": 0.5,
              },
            ]
          }
          onPress={[Function]}
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 16,
                "fontWeight": "600",
              },
              Object {
                "color": "#73818C",
              },
            ]
          }
          testID="course-invite.1.reject-button"
        >
          Decline
        </Button>
        <Button
          accessibilityTraits="button"
          containerStyle={
            Object {
              "backgroundColor": "#00AC18",
              "borderRadius": 4,
              "flex": 1,
              "height": 40,
              "margin": 4,
            }
          }
          onPress={[Function]}
          style={
            Object {
              "color": "white",
              "fontSize": 16,
              "fontWeight": "600",
            }
          }
          testID="course-invite.1.accept-button"
        >
          Accept
        </Button>
      </View>
    </View>
  </View>
</Component>
`;
